--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -7,6 +7,7 @@ $medBlue: #161E2E;
 $lightBlue: #677DA7;
 
 $bodyMaxWidth: 1400px;
+$mobileBreakpoint: 768px;
 $pageMargin: 2rem;
 
 @mixin fontTitle {
