--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -28,10 +28,6 @@ $pageMargin: 2rem;
     font-size: 0.925rem;
 }
 
-@mixin buttonStyles {
-
-}
-
 /* GENERAL •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
 
 html { scroll-behavior: smooth; }
@@ -57,13 +53,21 @@ h3 { font-size: 1.25rem; }
 h4 { font-size: 1.125rem; }
 h5 { font-size: 1rem; }
 
+.button {
+    @include fontTitle();
+    display: block;
+    padding: 1rem;
+    background: $medBlue;
+    color: $lightBlue;
+    text-decoration: none;
+}
 
 /* LANDING •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
 
 #landing {
     display: none; 
     display: block;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     max-width: unset; 
@@ -132,10 +136,14 @@ nav {
 
 #homeContent {
     section {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: $pageMargin;
         h2 { 
             text-align: center;
             margin-bottom: $pageMargin;
         }
+        .button { margin: $pageMargin auto; }
     }
 
     .gallery {
