--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -65,7 +65,7 @@ h5 { font-size: 1rem; }
 /* LANDING •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
 
 #landing {
-    display: none; 
+    // display: none; 
     display: block;
     position: fixed;
     top: 0;
