--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -70,6 +70,7 @@ h5 {
 
 /* LANDING •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
 #landing {
+  display: none;
   display: block;
   position: fixed;
   top: 0;
@@ -139,11 +140,15 @@ nav #logo {
 #homeContent section {
   display: flex;
   flex-direction: column;
-  margin-bottom: 2rem;
+  margin: 2rem 0;
+  padding-bottom: 2rem;
+}
+#homeContent section:not(:last-of-type) {
+  border-bottom: solid 1px rgba(103, 125, 167, 0.3137254902);
 }
 #homeContent section h2 {
   text-align: center;
-  margin-bottom: 2rem;
+  margin: 2rem 0;
 }
 #homeContent section .button {
   margin: 2rem auto;
