--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -70,7 +70,6 @@ h5 {
 
 /* LANDING •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
 #landing {
-  display: none;
   display: block;
   position: fixed;
   top: 0;
@@ -78,6 +77,7 @@ h5 {
   max-width: unset;
   width: 100vw;
   height: 100vh;
+  z-index: 1000;
 }
 #landing::before, #landing::after {
   content: "";
@@ -108,12 +108,17 @@ h5 {
 
 /* NAV •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
 nav {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
   height: 5rem;
   display: flex;
   gap: 2rem;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
   background: #161E2E;
+  border-bottom: solid 1px #11151E;
   font-family: "Krona One", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -121,30 +126,87 @@ nav {
   text-transform: uppercase;
   letter-spacing: 0.15em;
   font-size: 0.75rem;
+  z-index: 1000;
+  /* Socials */
 }
 nav .triplebar {
+  display: none;
   margin-right: auto;
   font-size: 2.5rem;
 }
+@media screen and (max-width: 768px) {
+  nav .triplebar {
+    display: block;
+    display: none;
+  }
+}
 nav #logo {
+  display: flex;
   position: absolute;
-  width: 3rem;
   aspect-ratio: 1/1;
-  background-image: url("../images/about/logoNav.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
+  width: 3rem;
+  background-image: url("../images/about/logoNav.svg");
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+nav #patreon {
+  display: flex;
+  position: absolute;
+  aspect-ratio: 1/1;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 1.5rem;
+  background-image: url("../images/socials/patreon.svg");
+}
+@media screen and (min-width: 769px) {
+  nav #patreon {
+    margin-top: -0.75rem;
+  }
+}
+nav a {
+  text-decoration: none;
+  color: #677DA7;
+}
+nav a:hover {
+  opacity: 0.5;
+}
+nav .mobileMenu {
+  display: flex;
+  gap: 2rem;
+}
+@media screen and (max-width: 768px) {
+  nav .mobileMenu {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 5rem;
+    left: 0;
+    padding: 2rem;
+    background: #161E2E;
+  }
 }
 
 /* HOMEPAGE ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
+#homeContent {
+  padding-top: 5rem;
+}
 #homeContent section {
   display: flex;
   flex-direction: column;
   margin: 2rem 0;
-  padding-bottom: 2rem;
 }
 #homeContent section:not(:last-of-type) {
+  padding-bottom: 4rem;
   border-bottom: solid 1px rgba(103, 125, 167, 0.3137254902);
+  margin: 2rem 0 4rem 0;
+}
+#homeContent section:last-of-type {
+  margin-bottom: 0;
 }
 #homeContent section h2 {
   text-align: center;
@@ -153,25 +215,34 @@ nav #logo {
 #homeContent section .button {
   margin: 2rem auto;
 }
-#homeContent .gallery {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+#homeContent .itemsGrid {
+  display: flex;
+  flex-wrap: wrap;
   gap: 2rem;
+  margin: 2rem auto;
 }
-#homeContent .gallery > * {
+@media screen and (max-width: 768px) {
+  #homeContent .itemsGrid {
+    flex-direction: column;
+  }
+}
+#homeContent .itemsGrid > * {
+  display: flex;
+  flex-direction: column;
   padding: 1rem;
   background: #161E2E;
   border-radius: 0.5rem;
   overflow: hidden;
+  margin: auto;
+  width: 25rem;
 }
-#homeContent .gallery > * img {
-  display: block;
-  width: calc(100% + 2rem);
-  aspect-ratio: 1/1;
-  background: #677DA7;
-  margin: -1rem -1rem 1rem -1rem;
+@media screen and (max-width: 768px) {
+  #homeContent .itemsGrid > * {
+    width: calc(100vw - 4rem);
+    max-width: 25rem;
+  }
 }
-#homeContent .gallery > * .itemTitle, #homeContent .gallery > * .itemPrice {
+#homeContent .itemsGrid > * .itemTitle, #homeContent .itemsGrid > * .itemPrice {
   margin-bottom: 1rem;
   text-align: center;
   font-family: "Krona One", sans-serif;
@@ -181,10 +252,117 @@ nav #logo {
   text-transform: uppercase;
   letter-spacing: 0.15em;
 }
-#homeContent .gallery > * .itemPrice {
+#homeContent .itemsGrid > * .itemPrice {
   font-size: 0.75rem;
+}
+#homeContent .itemsGrid > * .itemDescription {
+  display: inline-block;
+  margin: auto;
+}
+
+/* CUSTOM CONTENT ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
+.strawberrySkies .gallery .featuredImage {
+  background-image: url("../images/potsBig/strawberry.jpeg");
+}
+
+.korok .gallery .featuredImage {
+  background-image: url("../images/potsSmall/korok.jpeg");
+}
+
+/* GALLERY •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
+.gallery.fullScreenImg {
+  content: "";
+  display: block;
+  background: #0d0f16;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+.gallery .featuredImage {
+  width: 100%;
+  aspect-ratio: 1/1;
+  background-color: #11151E;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border-radius: 0.5rem;
+}
+@media screen and (max-width: 50rem) {
+  .gallery .featuredImage {
+    background-size: auto 100%;
+  }
+}
+.gallery .featuredImage.engaged {
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  margin: 0;
+  width: 100%;
+  height: calc(100% - 5rem - 4rem);
+  max-height: calc(100vh - 5rem);
+  aspect-ratio: unset;
+  top: calc(2.5rem + 50%);
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 2rem;
+  background-size: contain;
+  border-radius: 0;
+  background-color: transparent;
+  cursor: zoom-out;
+  z-index: 100;
+}
+.gallery .imageController {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  gap: 0.75rem;
+  padding: 2rem 1rem;
+}
+.gallery .imageController .imageSelector, .gallery .imageController .prev, .gallery .imageController .next {
+  background: #677DA7;
+  border-radius: 100%;
+  width: 0.5rem;
+  height: 0.5rem;
+  opacity: 0.5;
+  cursor: pointer;
+}
+.gallery .imageController .imageSelector:hover, .gallery .imageController .imageSelector.current, .gallery .imageController .prev:hover, .gallery .imageController .prev.current, .gallery .imageController .next:hover, .gallery .imageController .next.current {
+  opacity: 1;
+}
+.gallery .imageController .prev, .gallery .imageController .next {
+  border-radius: 0;
+  width: 1.25rem;
+  height: 1.25rem;
+  background: rgba(255, 255, 255, 0);
+  background-image: url("../images/about/arrow.svg");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0.5;
+}
+.gallery .imageController .prev:hover, .gallery .imageController .next:hover {
+  opacity: 0.25;
+}
+.gallery .imageController .prev.next, .gallery .imageController .next.next {
+  transform: rotate(-180deg);
 }
 
 /* FOOTER ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
+footer {
+  padding: 0 2rem;
+}
+footer section {
+  display: flex;
+  justify-content: center;
+  padding: 2rem 0;
+  border-top: solid 1px rgba(103, 125, 167, 0.3137254902);
+}
+footer section p {
+  opacity: 0.5;
+}
 
 /*# sourceMappingURL=styles.css.map */
