--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -7,6 +7,7 @@ $medBlue: #161E2E;
 $lightBlue: #677DA7;
 $lightBlue30: #677DA750;
 
+$navHeight: 5rem;
 $bodyMaxWidth: 1400px;
 $mobileBreakpoint: 768px;
 $pageMargin: 2rem;
@@ -27,6 +28,16 @@ $pageMargin: 2rem;
     line-height: 1.68em;
     color: $lightBlue;
     font-size: 0.925rem;
+}
+
+@mixin logoSetup {
+    display: flex;
+    position: absolute;
+    aspect-ratio: 1 / 1;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    // fill: $lightBlue;
 }
 
 /* GENERAL •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
@@ -66,7 +77,6 @@ h5 { font-size: 1rem; }
 /* LANDING •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
 
 #landing {
-    display: none; 
     display: block;
     position: fixed;
     top: 0;
@@ -74,6 +84,7 @@ h5 { font-size: 1rem; }
     max-width: unset; 
     width: 100vw;
     height: 100vh;
+    z-index: 1000;
 
     &::before, &::after {
         content: '';
@@ -107,41 +118,85 @@ h5 { font-size: 1rem; }
 /* NAV •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
 
 nav {
-    height: 5rem;
+    $logoWidth: 3rem;
+    $socialsWidth: 1.5rem;
+    position: fixed;
+    top:0;
+    left: 50%;
+    transform: translate(-50%, 0);
+    height: $navHeight;
     display: flex;
     gap: 2rem;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
     background: $medBlue;
+    border-bottom: solid 1px $darkBlue;
     @include fontTitle();
     font-size: 0.75rem;
+    z-index: 1000;
 
     .triplebar { 
+        display: none;
         margin-right: auto;
         font-size: 2.5rem;
-     }
+        @media screen and (max-width: $mobileBreakpoint) { 
+            display: block; 
+            display: none;
+        }
+    }
 
     #logo {
-        $logoWidth: 3rem;
-        position: absolute;
+        @include logoSetup();
         width: $logoWidth;
-        aspect-ratio: 1 / 1;
         background-image: url("../images/about/logoNav.svg");
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: contain;
+        left: 0; 
+        right: 0; 
+        margin: auto; 
+    }
+
+    /* Socials */
+    #patreon {
+        @include logoSetup();
+        width: $socialsWidth;
+        background-image: url("../images/socials/patreon.svg");
+        @media screen and (min-width: $mobileBreakpoint + 1) { margin-top: calc($socialsWidth / -2); }
+    }
+
+    a { 
+        text-decoration:none;
+        color: $lightBlue; 
+        &:hover { opacity: 0.5; }
+    }
+
+    .mobileMenu {
+        display: flex;
+        gap: 2rem;
+        @media screen and (max-width: $mobileBreakpoint) { 
+            display: none;
+            flex-direction: column;
+            position: absolute;
+            top: $navHeight;
+            left: 0;
+            padding: $pageMargin;
+            background: $medBlue;
+        }
     }
 }
 
 /* HOMEPAGE ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
 
 #homeContent {
+    padding-top: $navHeight;
     section {
         display: flex;
         flex-direction: column;
         margin: $pageMargin 0;
-        padding-bottom: $pageMargin;
-        &:not(:last-of-type) { border-bottom: solid 1px $lightBlue30; }
+        &:not(:last-of-type) { 
+            padding-bottom: calc($pageMargin * 2);
+            border-bottom: solid 1px $lightBlue30; 
+            margin: $pageMargin 0 calc($pageMargin * 2) 0;
+        }
+        &:last-of-type { margin-bottom: 0; }
         h2 { 
             text-align: center;
             margin: $pageMargin 0;
@@ -149,23 +204,25 @@ nav {
         .button { margin: $pageMargin auto; }
     }
 
-    .gallery {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+    .itemsGrid {
+        display: flex;
+        flex-wrap: wrap;
         gap: $pageMargin;
+        margin: calc($pageMargin) auto;
+        @media screen and (max-width: $mobileBreakpoint) { flex-direction: column; }
 
         > * {
+            display: flex;
+            flex-direction: column;
             padding: 1rem; 
             background: $medBlue; 
             border-radius: 0.5rem;
             overflow: hidden;
-            
-            img {
-                display: block;
-                width: calc(100% + 2rem);
-                aspect-ratio: 1 / 1;
-                background: $lightBlue;
-                margin: -1rem -1rem 1rem -1rem;
+            margin: auto;
+            width: 25rem;
+            @media screen and (max-width: $mobileBreakpoint) { 
+                width: calc(100vw - ($pageMargin * 2));
+                max-width: 25rem;
             }
 
             .itemTitle, .itemPrice {
@@ -177,9 +234,115 @@ nav {
             .itemPrice { 
                 font-size: 0.75rem;
             }
+            .itemDescription { 
+                display: inline-block; 
+                margin: auto;
+            }
+        }
+    }
+}
+
+
+/* CUSTOM CONTENT ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
+
+.strawberrySkies .gallery .featuredImage { background-image: url("../images/potsBig/strawberry.jpeg"); }
+.korok .gallery .featuredImage { background-image: url("../images/potsSmall/korok.jpeg"); }
+
+/* GALLERY •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
+
+.gallery {
+
+    &.fullScreenImg {
+        content: "";
+        display: block;
+        background: $darkestBlue;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+    }
+
+    .featuredImage {
+        width: 100%;
+        aspect-ratio: 1/1;
+        background-color: $darkBlue;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        border-radius: 0.5rem;
+        @media screen and (max-width: 50rem) { background-size: auto 100%; }
+
+        &.engaged { 
+            display: flex;
+            justify-content: center;
+            position: fixed;
+            margin: 0;
+            width: 100%;
+            height: calc(100% - $navHeight - ($pageMargin * 2));
+            max-height: calc(100vh - $navHeight);
+            aspect-ratio: unset;
+            top: calc(($navHeight / 2) + 50%);
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: $pageMargin;
+            background-size: contain;
+            border-radius: 0;
+            background-color: transparent;
+            cursor: zoom-out;
+            z-index: 100;
+        }
+    }
+
+    .imageController {
+        display: flex;
+        position: relative;
+        justify-content: center;
+        align-items: center;
+        gap: 0.75rem;
+        padding: $pageMargin calc($pageMargin / 2);
+        // @media screen and (max-width: $mobileBreakpoint) {
+        //     gap: 1rem;
+        //     padding: 0 1rem;
+        // }
+
+        .imageSelector, .prev, .next {
+            background: $lightBlue;
+            border-radius: 100%;
+            width: 0.5rem;
+            height: 0.5rem;
+            opacity: 0.5;
+            cursor: pointer;
+            &:hover, &.current {
+                opacity: 1;
+            }
+        }
+        .prev, .next {
+            border-radius: 0;
+            width: 1.25rem;
+            height: 1.25rem;
+            background: #fff0;
+            background-image: url("../images/about/arrow.svg");
+            background-size: contain;
+            background-position: center;
+            background-repeat: no-repeat;
+            opacity: 0.5;
+            &:hover { opacity: 0.25; }
+            &.next { transform: rotate(-180deg); }
         }
     }
 }
 
 /* FOOTER ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
 
+footer {
+    padding: 0 $pageMargin;
+    section {
+        display: flex;
+        justify-content: center;
+        padding: $pageMargin 0;
+        border-top: solid 1px $lightBlue30; 
+        p { opacity: 0.5; }
+    }
+}
