--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -232,6 +232,7 @@ nav {
             }
 
             .itemPrice { 
+                display: none;
                 font-size: 0.75rem;
             }
             .itemDescription { 
