--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -336,14 +336,15 @@ nav .mobileMenu {
 }
 .gallery .imageController .prev, .gallery .imageController .next {
   border-radius: 0;
-  width: 1.25rem;
-  height: 1.25rem;
+  width: 0.75rem;
+  height: 0.75rem;
   background: rgba(255, 255, 255, 0);
   background-image: url("../images/about/arrow.svg");
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
   opacity: 0.5;
+  margin: 0 0.5rem;
 }
 .gallery .imageController .prev:hover, .gallery .imageController .next:hover {
   opacity: 0.25;
