--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -8,7 +8,7 @@ $lightBlue: #677DA7;
 $lightBlue30: #677DA750;
 
 $navHeight: 5rem;
-$bodyMaxWidth: 1400px;
+$bodyMaxWidth: 1600px;
 $mobileBreakpoint: 768px;
 $pageMargin: 2rem;
 
@@ -202,6 +202,11 @@ nav {
             margin: $pageMargin 0;
         }
         .button { margin: $pageMargin auto; }
+
+        .inch_2 .itemsGrid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;;
+        }
     }
 
     .itemsGrid {
@@ -209,6 +214,8 @@ nav {
         flex-wrap: wrap;
         gap: $pageMargin;
         margin: calc($pageMargin) auto;
+        width: auto;
+        max-width: 52rem;
         @media screen and (max-width: $mobileBreakpoint) { flex-direction: column; }
 
         > * {
@@ -246,8 +253,14 @@ nav {
 
 /* CUSTOM CONTENT ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
 
-.strawberrySkies .gallery .featuredImage { background-image: url("../images/potsBig/strawberry.jpeg"); }
-.korok .gallery .featuredImage { background-image: url("../images/potsSmall/korok.jpeg"); }
+.strawberry .gallery .featuredImage { background-image: url("../images/pots5.5/strawberry1.jpg"); }
+
+.hood .gallery .featuredImage { background-image: url("../images/pots4.5/hood1.jpg"); }
+
+.korok .gallery .featuredImage { background-image: url("../images/pots2/korok1.jpg"); }
+.fungi .gallery .featuredImage { background-image: url("../images/pots2/violetCort1.jpg"); }
+.insects .gallery .featuredImage { background-image: url("../images/pots2/insects1.jpg"); }
+.scenery .gallery .featuredImage { background-image: url("../images/pots2/forestPark1.jpg"); }
 
 /* GALLERY •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
 
@@ -273,6 +286,7 @@ nav {
         background-size: cover;
         background-position: center;
         border-radius: 0.5rem;
+        cursor: zoom-in;
         @media screen and (max-width: 50rem) { background-size: auto 100%; }
 
         &.engaged { 
