--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -192,6 +192,52 @@ nav .mobileMenu {
 }
 
 /* HOMEPAGE ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
+/* HOMEPAGE ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
+.contactPopup {
+  display: none;
+  position: fixed;
+  background: rgba(0, 0, 0, 0.5333333333);
+  top: 5rem;
+  left: 0;
+  width: 100vw;
+  height: calc(100vh - 5rem);
+}
+.contactPopup.engaged {
+  display: block;
+}
+.contactPopup .content {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 50vh;
+  left: calc(50% - 2rem);
+  transform: translate(-50%, calc(-50% - 5rem));
+  width: calc(100% - 4rem);
+  max-width: 25rem;
+  margin: 2rem;
+  padding: 2rem;
+  background: #161E2E;
+  align-items: center;
+  border-radius: 0.5rem;
+}
+.contactPopup .content > * {
+  text-align: center;
+}
+.contactPopup .content > *:not(:last-child) {
+  margin-bottom: 2rem;
+}
+.contactPopup .content p {
+  font-family: "Alegreya Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 1.68em;
+  color: #677DA7;
+  font-size: 0.925rem;
+  letter-spacing: normal;
+  text-transform: none;
+}
+
+/* HOMEPAGE ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
 #homeContent {
   padding-top: 5rem;
 }
