--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -194,7 +194,16 @@ nav {
     width: 100vw;
     height: calc(100vh - $navHeight);
     &.engaged { display: block; }
-    &.about { .content.aboutContent { display: flex; } }
+    &.about { .content.aboutContent { 
+        display: flex; 
+        img { 
+            width: 8rem;
+            aspect-ratio: 1 / 1;
+            object-fit: cover;
+            border-radius: 100%;
+        }
+        p { text-align: left; }
+    } }
     &.contact { .content.contactContent { display: flex; } }
     .content {
         display: none;
@@ -204,7 +213,7 @@ nav {
         left: calc(50% - $pageMargin);
         transform: translate(-50%, calc(-50% - $navHeight));
         width: calc(100% - ($pageMargin * 2));
-        max-width: 25rem;
+        max-width: 32rem;
         margin: $pageMargin;
         padding: $pageMargin;
         background: $medBlue;
