--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -68,6 +68,12 @@ h5 {
   text-decoration: none;
 }
 
+@media screen and (max-width: 768px) {
+  .hideOnMobile {
+    display: none;
+  }
+}
+
 /* LANDING •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
 #landing {
   display: block;
@@ -137,7 +143,6 @@ nav .triplebar {
 @media screen and (max-width: 768px) {
   nav .triplebar {
     display: block;
-    display: none;
   }
 }
 nav #logo {
@@ -183,11 +188,20 @@ nav .mobileMenu {
   nav .mobileMenu {
     display: none;
     flex-direction: column;
+    justify-content: flex-end;
     position: absolute;
     top: 5rem;
     left: 0;
     padding: 2rem;
     background: #161E2E;
+    width: 100%;
+    max-width: 10rem;
+  }
+  nav .mobileMenu.expanded {
+    display: flex;
+  }
+  nav .mobileMenu:first-of-type {
+    top: 12.5rem;
   }
 }
 
@@ -212,6 +226,11 @@ nav .mobileMenu {
   aspect-ratio: 1/1;
   object-fit: cover;
   border-radius: 100%;
+}
+@media screen and (max-width: 768px) {
+  #navlinksPopup.about .content.aboutContent img {
+    width: 5rem;
+  }
 }
 #navlinksPopup.about .content.aboutContent p {
   text-align: left;
