--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -74,6 +74,8 @@ h5 { font-size: 1rem; }
     text-decoration: none;
 }
 
+.hideOnMobile { @media screen and (max-width: $mobileBreakpoint) { display: none; } }
+
 /* LANDING •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
 
 #landing {
@@ -140,8 +142,7 @@ nav {
         margin-right: auto;
         font-size: 2.5rem;
         @media screen and (max-width: $mobileBreakpoint) { 
-            display: block; 
-            display: none;
+            display: block;
         }
     }
 
@@ -174,11 +175,18 @@ nav {
         @media screen and (max-width: $mobileBreakpoint) { 
             display: none;
             flex-direction: column;
+            justify-content: flex-end;
             position: absolute;
             top: $navHeight;
             left: 0;
             padding: $pageMargin;
             background: $medBlue;
+            width: 100%;
+            max-width: 10rem;
+            &.expanded { display: flex; }
+            &:first-of-type {
+                top: 12.5rem;
+            }
         }
     }
 }
@@ -201,6 +209,7 @@ nav {
             aspect-ratio: 1 / 1;
             object-fit: cover;
             border-radius: 100%;
+            @media screen and (max-width: $mobileBreakpoint) { width: 5rem; }
         }
         p { text-align: left; }
     } }
