--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -5,8 +5,9 @@ $darkestBlue: #0d0f16;
 $darkBlue: #11151E;
 $medBlue: #161E2E;
 $lightBlue: #677DA7;
-$lightBlue30: #677DA750;
+$lightBlue50: #677DA780;
 $veryLightBlue: #7f94b9;
+$warning: #f87d58;
 
 $navHeight: 5rem;
 $bodyMaxWidth: 1600px;
@@ -73,6 +74,9 @@ h5 { font-size: 1rem; }
     background: $medBlue;
     color: $lightBlue;
     text-decoration: none;
+    border: none;
+    transition: 0.25s ease;
+    cursor: pointer;
 }
 
 .hideOnMobile { @media screen and (max-width: $mobileBreakpoint) { display: none; } }
@@ -246,6 +250,66 @@ nav {
     }
 }
 
+.contactForm {
+    $formPadding: 0.35rem;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    .formGroupContainer { 
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        margin-bottom: $pageMargin;
+        * { text-align: left; }
+        .formGroup { 
+            display: flex;
+            flex-direction: column;
+            flex: 1;
+            position: relative;
+            // @media screen and (max-width: $mobileBreakpoint) { flex-direction: column; }
+            label { 
+                position: absolute;
+                top: calc($formPadding * -1);
+                left: $formPadding;
+                padding: 0 $formPadding;
+                background: linear-gradient(to bottom, $medBlue, $medBlue 40%, $darkBlue 40%, $darkBlue 100%);
+                border-radius: 0.25rem;
+            }
+            input, textarea { 
+                @include fontBody();
+                flex: 1;
+                padding: calc($formPadding * 3) calc($formPadding * 2) calc($formPadding * 2) calc($formPadding * 2);
+                color: $veryLightBlue;
+                background: $darkBlue;
+                border: 1px solid $lightBlue50;
+                border-radius: 0.25rem;
+                &:-webkit-autofill {
+                    -webkit-box-shadow: 0 0 0px 1000px $darkBlue inset;
+                    -webkit-text-fill-color: $veryLightBlue !important;
+                }
+            }
+            textarea { 
+                min-height: 8rem;
+                resize: vertical;
+            }
+            .required {
+                &::after {
+                    content: "*";
+                    display: inline-block;
+                    margin-left: 0.125rem;
+                    color: $warning;
+                }
+            }
+        }
+    }
+    .formSubmit { 
+        color: $veryLightBlue;
+        background: $lightBlue50;
+        margin: auto;
+        &:hover { opacity: 0.5; }
+    }
+}
+
 /* HOMEPAGE ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
 
 #homeContent {
@@ -256,7 +320,7 @@ nav {
         margin: $pageMargin 0;
         &:not(:last-of-type) { 
             padding-bottom: calc($pageMargin * 2);
-            border-bottom: solid 1px $lightBlue30; 
+            border-bottom: solid 1px $lightBlue50; 
             margin: $pageMargin 0 calc($pageMargin * 2) 0;
         }
         &:last-of-type { margin-bottom: 0; }
@@ -416,7 +480,7 @@ footer {
         display: flex;
         justify-content: center;
         padding: $pageMargin 0;
-        border-top: solid 1px $lightBlue30; 
-        p { opacity: 0.5; }
+        border-top: solid 1px $lightBlue50; 
+        p { opacity: 0.75; }
     }
 }
