--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -245,7 +245,7 @@ nav .mobileMenu {
   display: none;
   flex-direction: column;
   position: absolute;
-  top: 50vh;
+  top: calc(50vh - 2.5rem);
   left: calc(50% - 2rem);
   transform: translate(-50%, calc(-50% - 5rem));
   width: calc(100% - 4rem);
