--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -57,6 +57,10 @@ body {
         padding: $pageMargin;
         background: $darkBlue;
     }
+    *::selection {
+        background: $lightBlue50;
+        color: $veryLightBlue;
+    }
 }
 
 h1, h2, h3, h4, h5, h6 { @include fontTitle(); }
