--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -402,6 +402,8 @@ nav {
 
 .hood .gallery .featuredImage { background-image: url("../images/pots4.5/hood1.jpg"); }
 
+.chanterellesPine .gallery .featuredImage { background-image: url("../images/pots4/chanterellesPine/chanterellesPine1.jpg"); }
+
 .wildflowers .gallery .featuredImage { background-image: url("../images/pots3.5/wildflowers/wildflowers6.jpg"); }
 
 .korok .gallery .featuredImage { background-image: url("../images/pots2/korok1.jpg"); }
