--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -84,48 +84,6 @@ h5 { font-size: 1rem; }
 
 .hideOnMobile { @media screen and (max-width: $mobileBreakpoint) { display: none; } }
 
-/* LANDING •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
-
-#landing {
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    max-width: unset; 
-    width: 100vw;
-    height: 100vh;
-    z-index: 1000;
-
-    &::before, &::after {
-        content: '';
-        position: absolute;
-    }
-    &::before {
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-image: url("../images/about/landing.jpeg");
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-attachment: fixed;
-        filter: blur(4px) brightness(50%);
-    }
-    &::after {
-        $logoWidth: 12rem;
-        top: calc(50% - ($logoWidth / 2));
-        left: calc(50% - ($logoWidth / 2));
-        width: $logoWidth;
-        aspect-ratio: 1 / 1;
-        background-image: url("../images/about/logoLanding.svg");
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: contain;
-        @media screen and (max-width: $mobileBreakpoint) { top: calc(50% - $logoWidth)}; 
-    }
-}
-
 /* NAV •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
 
 nav {
@@ -202,6 +160,25 @@ nav {
             }
             &:last-of-type { border-bottom: none; }
         }
+    }
+}
+
+/* LANDING •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
+
+#announcement {
+    margin-top: $navHeight;
+    padding: 0.5rem 2rem;
+    background: $darkestBlue;
+    color: $lightBlue;
+    font-size: 0.95rem;
+    text-align: center;
+    box-shadow: inset 0 0 1rem #0008;
+    @media screen and (max-width: $mobileBreakpoint) { max-width: 26.75rem; }
+    a {
+        color: $veryLightBlue;
+        font-weight: 600;
+        text-decoration: none;
+        &:hover { opacity: 0.5; }
     }
 }
 
@@ -376,6 +353,13 @@ nav {
                 max-width: 25rem;
             }
 
+            a {
+                color: $veryLightBlue;
+                font-weight: 600;
+                text-decoration: none;
+                &:hover { opacity: 0.5; }
+            }
+
             .itemTitle, .itemPrice {
                 margin-bottom: 1rem;
                 text-align: center;
@@ -384,7 +368,31 @@ nav {
 
             .itemPrice { 
                 display: none;
+                position: relative;
+                margin: 0 auto 0.75rem auto;
                 font-size: 0.75rem;
+                &.sold {
+                    display: block;
+                    transform: translateX(-2rem); // translates leftwards, half the width of "sold" text
+                    color: $warning;
+                    opacity: 0.5;
+                    &::before { // strikethrough
+                        content: "";
+                        position: absolute;
+                        width: 100%;
+                        height: 0.125rem;
+                        background: $warning;
+                        top: calc(50% - 0.125rem / 2);
+                        left: 0;
+                    }
+                    &::after { // width is 4rem;
+                        content: "sold";
+                        position: absolute;
+                        margin: -0.4rem 0 0 0.5rem;
+                        border: 0.125rem solid $warning;
+                        padding: 0.25rem;
+                    }
+                }
             }
             .itemDescription { 
                 display: inline-block; 
@@ -400,7 +408,8 @@ nav {
 .roseGarden .gallery .featuredImage { background-image: url("../images/pots5.5/roseGarden/roseGarden1.jpg"); }
 .strawberry .gallery .featuredImage { background-image: url("../images/pots5.5/strawberry/strawberry1.jpg"); }
 
-.hood .gallery .featuredImage { background-image: url("../images/pots4.5/hood1.jpg"); }
+.vineMaple .gallery .featuredImage { background-image: url("../images/pots4.5/vineMaple/vineMaple1.jpg"); }
+.hood .gallery .featuredImage { background-image: url("../images/pots4.5/hood/hood1.jpg"); }
 
 .chanterellesPine .gallery .featuredImage { background-image: url("../images/pots4/chanterellesPine/chanterellesPine1.jpg"); }
 
