--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -411,6 +411,7 @@ nav {
 .vineMaple .gallery .featuredImage { background-image: url("../images/pots4.5/vineMaple/vineMaple1.jpg"); }
 .hood .gallery .featuredImage { background-image: url("../images/pots4.5/hood/hood1.jpg"); }
 
+.oregonGrape .gallery .featuredImage { background-image: url("../images/pots4/oregonGrape/oregonGrape1.jpg"); }
 .chanterellesPine .gallery .featuredImage { background-image: url("../images/pots4/chanterellesPine/chanterellesPine1.jpg"); }
 
 .wildflowers .gallery .featuredImage { background-image: url("../images/pots3.5/wildflowers/wildflowers6.jpg"); }
