--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -474,6 +474,10 @@ nav .mobileMenu {
   background-image: url("../images/pots4.5/hood/hood1.jpg");
 }
 
+.oregonGrape .gallery .featuredImage {
+  background-image: url("../images/pots4/oregonGrape/oregonGrape1.jpg");
+}
+
 .chanterellesPine .gallery .featuredImage {
   background-image: url("../images/pots4/chanterellesPine/chanterellesPine1.jpg");
 }
