--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -404,6 +404,8 @@ nav {
 
 
 /* CUSTOM CONTENT ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
+// Remember to run the following code in terminal to see changes:
+// sass --watch stylesheets/styles.scss stylesheets/styles.css
 
 .roseGarden .gallery .featuredImage { background-image: url("../images/pots5.5/roseGarden/roseGarden1.jpg"); }
 .strawberry .gallery .featuredImage { background-image: url("../images/pots5.5/strawberry/strawberry1.jpg"); }
