--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -397,7 +397,7 @@ nav .mobileMenu {
   background: #161E2E;
   border-radius: 0.5rem;
   overflow: hidden;
-  margin: auto;
+  margin: 0 auto;
   width: 25rem;
 }
 @media screen and (max-width: 768px) {
@@ -484,6 +484,10 @@ nav .mobileMenu {
 
 .wildflowers .gallery .featuredImage {
   background-image: url("../images/pots3.5/wildflowers/wildflowers6.jpg");
+}
+
+.snowberries .gallery .featuredImage {
+  background-image: url("../images/pots2/snowberries/snowberries1.jpg");
 }
 
 .korok .gallery .featuredImage {
